[project]
name = "interviewsense"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.65.0",
    "google-generativeai",
    "loguru>=0.7.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "pyyaml>=6.0.3",
]
